--- a/src/pages/primer.mdx
+++ b/src/pages/primer.mdx
@@ -3,6 +3,7 @@ import { Box, Button } from '@primer/react'
 
 <Canvas grid={true}>
   <Box 
+  id="box1"
   sx={{ 
     display: 'flex',
     flexDirection: 'column',
