--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -10,7 +10,7 @@ import { StateToggle } from '../components/StateToggle.jsx'
 <Box id="box4" sx={boxStyles}>
   <ThemeToggle />
 </Box>
-  <Box id="box1" sx={{...boxStyles, backgroundColor: 'var(--bgColor-default)'}}>
+  <Box id="box1" sx={boxStyles}>
     <Button size="large" variant="primary">Save</Button>
     <Button size="large" variant="secondary">Edit</Button>
     <Button size="large" variant="danger">Delete</Button>
